--- a/css/mermaid.css
+++ b/css/mermaid.css
@@ -4,6 +4,8 @@ code.language-mermaid,
     background: none;
     border: none;
     padding: 0;
+    display: flex;
+    justify-content: center;
 }
 
 .mermaid-graph {
@@ -122,6 +124,11 @@ code.language-mermaid,
     color: var(--node-text);
 }
 
+.mermaid-graph .node .label div {
+    padding-top: 0.1em;
+}
+
+
 
 /*** LINES ***************************************************/
 
@@ -145,9 +152,11 @@ code.language-mermaid,
 /*** LINE LABELS ***************************************************/
 
 .mermaid-graph .edgeLabel {
+    display: block;
     text-align: center;
     color: var(--label-text);
     font-weight: bold;
+    padding-top: 0.1em;
 }
 
 .mermaid-graph .edgeLabel rect {
